log
Fri Mar 12 19:55:34 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:10: error: ‘return’ with a value, in function returning void [-Werror]
   return EXIT_SUCCESS;
          ^~~~~~~~~~~~
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 12 19:55:59 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Sat Mar 13 16:50:33 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:16: error: expected expression before ‘]’ token
 *suma=sumaN(*a[],n)-sumaN(*a[],m);
                ^
Compilation failed
Sat Mar 13 16:50:44 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:13: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 *suma=sumaN(*a,n)-sumaN(*a,m);
             ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:25: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 *suma=sumaN(*a,n)-sumaN(*a,m);
                         ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 16:52:51 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:14: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 suma = sumaN(*a,n) - sumaN(*a,m);
              ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:28: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 suma = sumaN(*a,n) - sumaN(*a,m);
                            ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 suma = sumaN(*a,n) - sumaN(*a,m);
      ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 16:53:00 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 *suma = sumaN(*a,n) - sumaN(*a,m);
               ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:29: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
 *suma = sumaN(*a,n) - sumaN(*a,m);
                             ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 16:53:26 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘]’ token
 *suma = sumaN(a[],n) - sumaN(a[],m);
                 ^
Compilation failed
Sat Mar 13 16:53:41 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
f213c05
Sat Mar 13 17:01:35 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
94c06ae
Sat Mar 13 18:48:14 UTC 2021: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
6222cd8
Sat Mar 13 18:49:49 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ca7f0fc
Sat Mar 13 18:50:36 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4cd4333
Sat Mar 13 18:51:20 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
0218ffe
Sat Mar 13 19:01:08 UTC 2021: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
91232ea
Sat Mar 13 19:05:35 UTC 2021: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
0496672
Sat Mar 13 19:07:51 UTC 2021: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
265d5bb
Sat Mar 13 19:08:06 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
3706f85
Sat Mar 13 19:08:40 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
48b41e1
Sat Mar 13 19:08:52 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3859921
Sat Mar 13 19:10:07 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d062493
Sat Mar 13 19:15:42 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
b5deab9
Sat Mar 13 19:16:59 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
84d967a
Sat Mar 13 19:19:23 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
4719caf
Sat Mar 13 19:21:27 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
3adf971
Sat Mar 13 19:23:28 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
55d34cf
Sat Mar 13 19:25:34 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
a9882f6
Sat Mar 13 19:32:31 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f4de9e3
